injiweb-1642 changed method names based on review
Signed-off-by: Gurpreet41082 <gurpreet.kaur@thoughtworks.com>